force-app/main/default/objects/LEXRegistration_AttestationSetup__mdt/LEXRegistration_AttestationSetup__mdt.object-meta.xml
<CustomObject>
    <label>LEXRegistration_AttestationSetup</label>
    <pluralLabel>LEXRegistration_AttestationSetup</pluralLabel>
</CustomObject>