force-app/main/default/objects/LEXRegistration_AttestationSetup__mdt/fields/Attestation_Text__c.field-meta.xml
<CustomField>
    <fullName>Attestation_Text__c</fullName>
    <inlineHelpText>Controls the Text that is displayed in the paragraph,</inlineHelpText>
    <label>Attestation Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>