force-app/main/default/objects/LEXRegistration_AttestationSetup__mdt/listViews/All_Paragraphs.listView-meta.xml
<ListView>
    <fullName>All_Paragraphs</fullName>
    <columns>Active__c</columns>
    <columns>Paragraph_Order__c</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <label>All Paragraphs</label>
    <language>en_US</language>
</ListView>